fluff page updates

--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -19,35 +19,42 @@
   </header>
 <main id="wrapper">
 
-    <article class="scene fullheight" id="westminster">
-    <div class="lgpic">
-        <img id= "fluffguy" class="fullheight" src="images/union/fluffguy.png">  
-    </div>
-    </article>
 
-    <article class="scene fullheight" id="picadilly">
-    <div class="lgpic">
-        <img id= "fluffguy" class="fullheight" src="images/union/NewtonStreetApartmentsEDIT.png">  
-    </div>
+    <article class="scene fullheight" id="victoria">
+      <div class="lgpic">
+          <img id= "fluffguy" class="fullheight" src="images/union/MonumentEdit.png">  
+      </div>
     </article>
 
     <article class="scene fullheight" id="cambridge">
-    <div class="lgpic">
-        <img id= "fluffguy" class="fullheight" src="images/union/fluffdancers.png">  
-    </div>
+      <div class="lgpic">
+          <img id= "fluffdancers" class="fullheight" src="images/union/fluffdancers.png">  
+      </div>
+    </article>
+    
+
+    <article class="scene fullheight" id="westminster">
+
+      <div class="lgpic">
+          <img id= "fluffguy" class="fullheight" src="images/union/fluffguy.png">  
+      </div>
+      <div class="lgpic2">
+          <img id= "fluffdancers" class="fullheight" src="images/union/fluffdancers.png">  
+      </div>
+    </article>
+
+    <article class="scene fullheight" id="picadilly">
+      <div class="lgpic">
+          <img id= "fluffguy" class="fullheight" src="images/union/NewtonStreetApartmentsEDIT.png">  
+      </div>
     </article>
 
     <article class="scene fullheight" id="oxford">
-    <div class="lgpic">
-        <img id= "fluffguy" class="fullheight" src="images/union/MonumentEdit.png">  
-    </div>
+      <div class="lgpic">
+          <img id= "fluffguy" class="fullheight" src="images/union/MonumentEdit.png">  
+      </div>
     </article>
 
-    <article class="scene fullheight" id="victoria">
-    <div class="lgpic">
-        <img id= "fluffguy" class="fullheight" src="images/union/MonumentEdit.png">  
-    </div>
-    </article>
 
   <article class="scene fullheight" id="attractions">
     <div class="lgpic">
