--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -19,22 +19,10 @@
   </header>
 <main id="wrapper">
 
-
-    <article class="scene fullheight" id="victoria">
-      <div class="lgpic">
-          <img id= "fluffguy" class="fullheight" src="images/union/MonumentEdit.png">  
-      </div>
-    </article>
-
-    <article class="scene fullheight" id="cambridge">
-      <div class="lgpic">
-          <img id= "fluffdancers" class="fullheight" src="images/union/fluffdancers.png">  
-      </div>
-    </article>
-    
-
     <article class="scene fullheight" id="westminster">
-
+      <div class="smpic">
+          <img id= "fluff" class="smallheight" src="images/union/fluff.png">  
+      </div>
       <div class="lgpic">
           <img id= "fluffguy" class="fullheight" src="images/union/fluffguy.png">  
       </div>
@@ -43,16 +31,29 @@
       </div>
     </article>
 
-    <article class="scene fullheight" id="picadilly">
-      <div class="lgpic">
-          <img id= "fluffguy" class="fullheight" src="images/union/NewtonStreetApartmentsEDIT.png">  
+    <article class="scene fullheight" id="victoria">
+      <div class="bldgpic1">
+          <img id= "grooves" class="fullheight" src="images/bldg/GroovesEdit.jpg">  
       </div>
+      <div class="bldgpic2">
+          <img id= "mamagina" class="fullheight" src="images/bldg/mamaginaEdit.jpg">  
+      </div>
+      <div class="bldgpic3">
+          <img id= "scatv" class="fullheight" src="images/bldg/SCATVEdit.jpg">  
+      </div>
+    </article>
+    
+    <article class="scene fullheight" id="picadilly">
+      <div class="spacer" id="spacer1">
+        <p>Content 1</p> 
+      </div><!-- parallax1 -->
+
     </article>
 
     <article class="scene fullheight" id="oxford">
-      <div class="lgpic">
-          <img id= "fluffguy" class="fullheight" src="images/union/MonumentEdit.png">  
-      </div>
+      <div class="spacer" id="spacer2">
+        <p>Content 2</p> 
+      </div><!-- parallax2 -->
     </article>
 
 
