before changing html/scss for spacers

--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -41,20 +41,24 @@
       <div class="bldgpic3">
           <img id= "scatv" class="fullheight" src="images/bldg/SCATVEdit.jpg">  
       </div>
+      <div class="bldgpic4">
+          <img id= "mural" class="fullheight" src="images/bldg/muralEdit.jpg">  
+      </div>
     </article>
     
     <article class="scene fullheight" id="picadilly">
-      <div class="spacer" id="spacer1">
-        <p>Content 1</p> 
-      </div><!-- parallax1 -->
 
     </article>
+    <article class="scene spacer" id="spacer1">
+        <p>Content 1</p> 
+    </article><!-- parallax1 -->
 
     <article class="scene fullheight" id="oxford">
-      <div class="spacer" id="spacer2">
-        <p>Content 2</p> 
-      </div><!-- parallax2 -->
     </article>
+
+    <article class="scene spacer" id="spacer2">
+        <p>Content 2</p> 
+    </article><!-- parallax2 -->
 
 
   <article class="scene fullheight" id="attractions">
