before adjusting building tween

--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -31,6 +31,8 @@
       </div>
     </article>
 
+
+
     <article class="scene fullheight" id="victoria">
       <div class="bldgpic1">
           <img id= "grooves" class="fullheight" src="images/bldg/GroovesEdit.jpg">  
@@ -49,6 +51,7 @@
     <article class="scene fullheight" id="picadilly">
 
     </article>
+
     <article class="scene spacer" id="spacer1">
         <p>Content 1</p> 
     </article><!-- parallax1 -->
@@ -59,16 +62,29 @@
     <article class="scene spacer" id="spacer2">
         <p>Content 2</p> 
     </article><!-- parallax2 -->
+ 
+    <article class="scene fullheight" id="attractions">
+      <div class="lgpic">
+          <img id= "fluffguy" class="fullheight" src="images/union/fluffguy.png">  
+      </div>
+    </article><!-- attractions -->
 
+    <nav id="nav">
+      <div class="navbar">
+        <div class="brand"><a href="#welcome">Union <span>Hotel</span></a></div>
+          <ul>
+            <li><a class="icon info" href="#westminster"><span>info</span></a></li>
+            <li><a class="icon community" href="#victoria"><span>community</span></a></li>
+            <li><a class="icon dining" href="#picadilly"><span>dining</span></a></li>
+            <li><a class="icon events" href="#oxford"><span>events</span></a></li>
+            <li><a class="icon attractions" href="#attractions"><span>attractions</span></a></li>
+          </ul>
+      </div><!-- navbar -->
+    </nav>
 
-  <article class="scene fullheight" id="attractions">
-    <div class="lgpic">
-        <img id= "fluffguy" class="fullheight" src="images/union/fluffguy.png">  
-    </div>
-  </article><!-- attractions -->
 </main>
-<footer class="scene">
-  <article class="content">
+<footer>
+
     <div id="socialmedia">
       <ul class="group">
         <li><a href="https://twitter.com"><img class="icon" src="images/socialmedia/twitter.png" alt="icon for twitter" /></a></li>
@@ -76,7 +92,7 @@
         <li><a href="http://www.youtube.com"><img class="icon" src="images/socialmedia/youtube.png" alt="icon for youtube" /></a></li>    
       </ul>      
     </div>
-  </article>
+
 </footer>
   <script src="js/script.js"></script>
 </body>
