new docs/images

--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Somerville Union</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="//vjs.zencdn.net/4.11/video-js.css">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 </head>
 <body>
@@ -49,6 +50,14 @@
     </article>
     
     <article class="scene fullheight" id="housing">
+      <video id="david" class="video-js vjs-default-skin"
+        controls preload="auto" width="640" height="264"
+        data-setup='{"example_option":true}'>
+       <source src="video/davidWeb.mp4" type='video/mp4' />
+       <source src="video/davidwebmhd.webm" type='video/webm' />
+       <source src="video/david.oggtheora.mp4" type='video/ogg' />
+       <p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a web browser that <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a></p>
+    </video>
 
     </article>
 
