updates before class

--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -11,7 +11,7 @@
   <header id="intro">
     <article class="fullheight">
       <div class="hgroup">
-        <h1>Somerville <br />Union</h1>
+        <img id= "mainlogo" class="logo" src="images/icons/mainlogo.png">  
 
         <p><a href="#welcome"><img src="images/misc/arrow.png" alt="down arrow"></a></p>
       </div>
@@ -22,7 +22,7 @@
 
     <article class="scene fullheight" id="community">
       <div class="smpic">
-          <img id= "fluff" class="smallheight" src="images/union/fluff.png">  
+          <img id= "fluff" div class="75height" src="images/union/fluff.png">  
       </div>
       <div class="lgpic">
           <img id= "fluffguy" class="fullheight" src="images/union/fluffguy.png">  
@@ -35,18 +35,30 @@
 
 
     <article class="scene fullheight" id="business">
-      <div class="bldgpic">
+
+      <div class="colorpic">
+        <img id="red" class="colorpic1" src="images/misc/redcolor.png">  
+      </div>
+
+      <div class="panelpic">
           <img id= "grooves" class="bldgpic4" src="images/bldg/groovesbldg.jpg">  
       </div>
-      <div class="bldgpic">
+      <div class="panelpic">
           <img id= "mamagina" class="bldgpic3" src="images/bldg/mamaginabldg.jpg">  
       </div>
-      <div class="bldgpic">
+      <div class="panelpic">
           <img id= "scatv" class="bldgpic2" src="images/bldg/SCATVbldg.jpg">  
       </div>
-      <div class="bldgpic">
+      <div class="panelpic">
           <img id= "mural" class="bldgpic1" src="images/bldg/muralbldg.jpg">  
       </div>
+      <div class="panelpic"> 
+        <img id="greyblue" class="colorpic2" src="images/misc/greybluecolor.jpg">  
+      </div>
+      <div class="unionpic"> 
+        <img id="bowstreet" class="unionpic1" src="images/union/bowstreet.jpg">  
+      </div>
+
     </article>
     
     <article class="scene fullheight" id="housing">
@@ -61,7 +73,7 @@
 
 
     <div class="spacer">
-        <img class="spacerpic" id= "spacer1"  src='images/union/skylineParallax2.jpg'> 
+        <img class="spacerpic" id= "spacer1"  src='images/union/skylineParallax1.jpg'> 
     </div>
          
 
@@ -69,7 +81,7 @@
     </article>
 
     <div class="spacer">
-        <img class="spacerpic" id= "spacer3"  src='images/union/skylineParallax3.jpg'> 
+        <img class="spacerpic" id= "spacer2"  src='images/union/skylineParallax2.jpg'> 
     </div>
  
     <article class="scene fullheight" id="attractions">
